edited ip address to lorraine rpi + fixed gap btwn shopping list and receipt

--- a/src/App.css
+++ b/src/App.css
@@ -53,5 +53,5 @@
   display: flex;
   flex-direction: column;  
   justify-content: space-between;
-  gap: 2wh;
+  gap: 2em;
 }
